--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "movierental",
+  "name": "movieStore",
   "version": "1.0.0",
   "main": "index.js",
-
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "Ajay",
   "license": "ISC",
-  "description": "Movie Rental app",
-
+  "description": "MovieStore app",
   "dependencies": {
+    "config": "^1.29.2",
+    "debug": "^4.3.3",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "helmet": "^5.0.2",
     "joi": "^13.1.0",
-    "nodemon": "^2.0.15"
+    "mongoose": "^6.2.4",
+    "morgan": "^1.10.0"
   },
-
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
