--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "debug": "^4.3.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "fawn": "^2.1.5",
     "helmet": "^5.0.2",
     "joi": "^13.1.0",
+    "joi-objectid": "^4.0.2",
     "mongoose": "^6.2.4",
     "morgan": "^1.10.0"
   },
