--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "MovieStore app",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "config": "^1.29.2",
     "debug": "^4.3.3",
     "dotenv": "^16.0.0",
@@ -19,6 +20,8 @@
     "helmet": "^5.0.2",
     "joi": "^13.1.0",
     "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.2.4",
     "morgan": "^1.10.0"
   },
